--- a/dyppet.html
+++ b/dyppet.html
@@ -9,7 +9,7 @@
   <body class="gridcontainer">
 
   <h1>Grid Layout</h1>
-<h4>hejhej</h4>
+<h4>hejhej mit navn er Kaj</h4>
   <p>This grid layout contains six columns and three rows:</p>
 
   <div class="grid-container">
